# OpenSpacePP

./: .gitignore  CMakeLists.txt  README.md
src/: Main.cpp
src/Engine/: Application.cpp  Buffer.cpp  CMakeLists.txt  Device.cpp  GraphicsPipeline.cpp  GraphicsPipelineBuilder.cpp  Io.cpp  Pipeline.cpp
src/Engine/Include/Engine/: Application.hpp  Buffer.hpp  ComponentTypeClass.hpp  Device.hpp  Format.hpp  GraphicsPipeline.hpp  GraphicsPipelineBuilder.hpp  InputLayoutElement.hpp  Io.hpp  Pipeline.hpp  PrimitiveTopology.hpp  Utilities.hpp  VertexPositionUvVP.hpp
src/GameClient/: CMakeLists.txt  GameApplication.cpp  Main.cpp
src/GameClient/Data/Shaders/: SimpleVertexPulling.vs.glsl
src/GameClient/Include/GameClient/: GameApplication.hpp
src/GameServer/: CMakeLists.txt  Main.cpp
